--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: delb-xml/xmllint-action@0.1
+      - uses: delb-xml/xmllint-action@0.2
+        with:
+          root_folder: files
 
 ...
